--- a/rentorbuy.ipynb
+++ b/rentorbuy.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Import Data:\n",
     "\n",
-    "- Explore the data, keeping in mind data analysis principles.(https://en.wikipedia.org/wiki/Data_analysis)\n",
+    "- Explore the data.\n",
     "- Pick a starting point and create visualizations that might help understand the data better.\n",
     "- Come back and explore other parts of the data and create more visualizations and models.\n",
     "\n",
@@ -227,9 +227,10 @@
     "\n",
     "## Percent of homes increasing in value:\n",
     "\n",
-    "- For getting neighborhood level information the code is \"/N\", using this code in the get_df function defined above. \n",
-    "- The next looks for neighborhoods in Chicago. This is a smaller subset of the larger dataset but it might be useful to create a visualization and explore it.\n",
-    "- The \"description\" column is very useful while filtering rows in the ~1.38M Zillow Research datasets on Quandl.\n",
+    "- Percent of homes increasing in value is a metric that may be useful while making the decision to buy or rent.\n",
+    "- Using the code is \"/Z\" for getting data by zipcode.\n",
+    "- Using the description to filter the data to Chicago zipcodes.\n",
+    "- There are ~1.38M Zillow Research datasets on Quandl this these filters come in handy while exploring data.\n",
     "- Make API call to Quandl and get the percent of homes increasing values for all homes by neighborhood in Chicago.(http://www.realestatedecoded.com/zillow-percent-homes-increasing-value/)\n"
    ]
   },
